--- a/CSharpBible/WPFSamples_2/WPF_Brushes/App.xaml
+++ b/CSharpBible/WPFSamples_2/WPF_Brushes/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Brushes"
                xmlns:presentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
-             StartupUri="SampleViewer.xaml">
+             StartupUri="Views\SampleViewer.xaml">
     <Application.Resources>
 
         <XmlDataProvider x:Key="ExampleData" 
@@ -11,12 +11,12 @@
       Source="sampleResources\TOC.xml" />
 
         <ImageBrush x:Key="MySteelBrushResource"
-      ImageSource="sampleImages\steel.png" TileMode="Tile" 
+      ImageSource="/sampleImages/steel.png" TileMode="Tile" 
       Viewport="0,0,500,300" ViewportUnits="Absolute"
       presentationOptions:Freeze="True" />
 
         <ImageBrush x:Key="MyCloudyGlassBrushResource"
-      ImageSource="sampleImages\clouds.png" 
+      ImageSource="/sampleImages/clouds.png" 
       Viewport="0,0,300,300" ViewportUnits="Absolute"
       TileMode="FlipXY" 
       presentationOptions:Freeze="True" />
@@ -341,7 +341,7 @@
                 StrokeThickness="1" RadiusX="10" RadiusY="10" Opacity="0">
                                 <Rectangle.Fill>
                                     <ImageBrush x:Name="glassCubeBrush"
-                    ImageSource="sampleImages\clouds.png" 
+                    ImageSource="/sampleImages/clouds.png" 
                     Viewport="0,0,300,300" ViewportUnits="Absolute"
                     TileMode="FlipXY" />
                                 </Rectangle.Fill>
