--- a/CSharpBible/WPFSamples_2/WPF_Brushes/Views/SampleViewer.xaml
+++ b/CSharpBible/WPFSamples_2/WPF_Brushes/Views/SampleViewer.xaml
@@ -6,108 +6,116 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   x:Class="Brushes.Views.SampleViewer"
+  xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
   xmlns:examples="clr-namespace:Brushes"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
   xmlns:local="clr-namespace:Brushes"
   xmlns:views="clr-namespace:Brushes.Views"
+  xmlns:mvvm="clr-namespace:Brushes.ViewModels"
+  mc:Ignorable="d"
   WindowTitle="Brush Examples"
   Background="White">
-
-  <Page.Resources>
-    <DoubleAnimation From="0" To="1" Duration="0:0:0.1" x:Key="MyFadeInAnimationResource" />
-    <HierarchicalDataTemplate x:Key="ExamplesDataTemplate"
+    <d:Page.DataContext>
+        <mvvm:SampleViewerViewModel />
+    </d:Page.DataContext>
+    
+    <Page.Resources>
+        <DoubleAnimation From="0" To="1" Duration="0:0:0.3" x:Key="MyFadeInAnimationResource" />
+        <HierarchicalDataTemplate x:Key="ExamplesDataTemplate"
      ItemsSource="{Binding XPath=Children/Example}">
-      <TextBlock 
+            <TextBlock 
         Text="{Binding XPath=@Title}" 
         ToolTip="{Binding XPath=Description}" />
-    </HierarchicalDataTemplate>
-  </Page.Resources>
+        </HierarchicalDataTemplate>
+    </Page.Resources>
 
-  <DockPanel Name="mainPanel">
+    <DockPanel Name="mainPanel">
 
-    <Menu DockPanel.Dock="Top">
-      <MenuItem Header="_File" >
-        <MenuItem Command="{x:Static views:SampleViewer.ExitCommand}">
-          <MenuItem.CommandBindings>
-            <CommandBinding 
-              Command="{x:Static views:SampleViewer.ExitCommand}" 
-              Executed="ExecuteExitCommand" />
-          </MenuItem.CommandBindings>
-          <MenuItem.InputBindings>
-            <KeyBinding 
-              Command="{x:Static views:SampleViewer.ExitCommand}"
-              Key="F4" Modifiers="Alt" />
-          </MenuItem.InputBindings>
-        </MenuItem>
-      </MenuItem>
-    </Menu>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File" >
+                <MenuItem Command="{Binding ExitCommand}">
+                    <MenuItem.InputBindings>
+                        <KeyBinding  Key="F4" Modifiers="Alt" />
+                    </MenuItem.InputBindings>
+                </MenuItem>
+            </MenuItem>
+        </Menu>
 
-    <Rectangle 
+        <Rectangle 
       DockPanel.Dock="Top"
       Height="1"
       Fill="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}" />
 
-      <Rectangle 
+        <Rectangle 
       DockPanel.Dock="Top"
       Height="1"
       Fill="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" />
 
-      <Border DockPanel.Dock="Left" BorderBrush="LightGray" BorderThickness="0,0,2,0"
+        <Border DockPanel.Dock="Left" BorderBrush="LightGray" BorderThickness="0,0,2,0"
       Background="{StaticResource GlassBrushResource}">
-      <Expander ExpandDirection="Left">
-        <Expander.Header>
-          <TextBlock Foreground="#99000000"
+            <Expander ExpandDirection="Left">
+                <Expander.Header>
+                    <TextBlock Foreground="#99000000"
             FontFamily="Verdana" FontWeight="Bold" FontSize="24pt" 
             Text="Contents">
-            <TextBlock.LayoutTransform>
-              <RotateTransform Angle="90" />
-            </TextBlock.LayoutTransform>
-          </TextBlock>
-        </Expander.Header>
+                        <TextBlock.LayoutTransform>
+                            <RotateTransform Angle="90" />
+                        </TextBlock.LayoutTransform>
+                    </TextBlock>
+                </Expander.Header>
 
 
-        <Border  Background="{StaticResource MySteelBrushResource}">
-          <Border Background="{StaticResource MyCloudyGlassBrushResource}">
-            <StackPanel DockPanel.Dock="Left" Orientation="Vertical" 
+                <Border  Background="{StaticResource MySteelBrushResource}">
+                    <Border Background="{StaticResource MyCloudyGlassBrushResource}">
+                        <StackPanel DockPanel.Dock="Left" Orientation="Vertical" 
               HorizontalAlignment="Left" Margin="10">
 
-              <!-- Lists the different brush samples. The list is
+                            <!-- Lists the different brush samples. The list is
                    defined in the sampleResources\TOC.xml file. -->
-              <TreeView Name="myPageList"
+                            <TreeView Name="myPageList"
                 KeyboardNavigation.DirectionalNavigation="Cycle" 
                 BorderBrush="Transparent"
                 Background="Transparent"
                 ItemTemplate="{DynamicResource ExamplesDataTemplate}"
                 ItemContainerStyle="{StaticResource TreeViewItemHeaderStyle}"
                 SelectedValuePath="Example">
-                <TreeView.ItemsSource>
-                  <Binding Source="{StaticResource ExampleData}" XPath="*"/>
-                </TreeView.ItemsSource>
-                <TreeView.Triggers>
-                  <EventTrigger RoutedEvent="TreeView.SelectedItemChanged">
-                    <BeginStoryboard>
-                      <Storyboard>
-                        <DoubleAnimation 
+                                <TreeView.ItemsSource>
+                                    <Binding Source="{StaticResource ExampleData}" XPath="*"/>
+                                </TreeView.ItemsSource>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="SelectedItemChanged">
+                                        <i:InvokeCommandAction Command="{Binding SelectedItemChangedCommand}" PassEventArgsToCommand="True"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                                <TreeView.Triggers>
+                                    <EventTrigger RoutedEvent="TreeView.SelectedItemChanged">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <DoubleAnimation 
                           Storyboard.TargetName="myFrame"
-                          Storyboard.TargetProperty="Opacity" 
-                          From="1" To="0" Duration="0:0:0.1" 
-                          CurrentStateInvalidated="TransitionAnimationStateChanged"/>
-                      </Storyboard>
-                    </BeginStoryboard>
-                  </EventTrigger>
-                </TreeView.Triggers>
-              </TreeView>
-            </StackPanel>
-          </Border>
+                          Storyboard.TargetProperty="Opacity"
+                          From="1" To="0" Duration="0:0:0.3"
+                                                    Completed="DoubleAnimation_Completed">
+                                                </DoubleAnimation>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                </TreeView.Triggers>
+                            </TreeView>
+                        </StackPanel>
+                    </Border>
+                </Border>
+            </Expander>
         </Border>
-      </Expander>
-    </Border>
-    <ScrollViewer VerticalAlignment="Stretch">
-      <Frame Name="myFrame" 
+        <ScrollViewer VerticalAlignment="Stretch">
+            <Frame Name="myFrame" 
         NavigationUIVisibility="Hidden"
-        Navigated="MyFrameNavigated" Source="BrushTypesExample.xaml"
+        Navigated="MyFrameNavigated" Source="{Binding NavigationSource}"
         VerticalAlignment="Stretch" />
-    </ScrollViewer>
-  </DockPanel>
+        </ScrollViewer>
+    </DockPanel>
 </Page>
 
 
