--- a/GenFreeWin/GenFreeWin3/App.xaml
+++ b/GenFreeWin/GenFreeWin3/App.xaml
@@ -1,8 +1,13 @@
 ﻿<Application
-    x:Class="GenFreeWin3.App"
+    x:Class="GenFreeWpf.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:GenFreeWin3"
+    xmlns:local="clr-namespace:GenFreeWpf"
+    xmlns:vc2="clr-namespace:MVVM.View.ValueConverter;assembly=MVVM_BaseLib"
     StartupUri="MainWindow.xaml">
-    <Application.Resources />
+    <Application.Resources>
+        <ResourceDictionary>
+            <vc2:Bool2VisibilityConverter x:Key="Bool2VisibilityConverter" />
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
