--- a/GenFreeWin/GenFreeWin3/MainWindow.xaml
+++ b/GenFreeWin/GenFreeWin3/MainWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="GenFreeWin3.MainWindow"
+﻿<Window x:Class="GenFreeWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GenFreeWin3"
-        xmlns:mvvm="clr-namespace:GenFreeWin3/ViewModels"
+        xmlns:local="clr-namespace:GenFreeWpf"
+        xmlns:mvvm="clr-namespace:GenFreeWpf.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
-        <mvvm:MainWindowViewModel/>
+        <mvvm:MainWindowViewModel />
     </Window.DataContext>
     <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" d:Source="Views/Menue.xaml" Source="" >
         <Frame.Resources>
