--- a/CSharpBible/MVVM_Tutorial/MVVM_06_Converters_4/View/PlotFrame.xaml
+++ b/CSharpBible/MVVM_Tutorial/MVVM_06_Converters_4/View/PlotFrame.xaml
@@ -1,65 +1,62 @@
-<Page x:Class="MVVM_06_Converters_4.View.PlotFrame"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-      xmlns:local="clr-namespace:MVVM_06_Converters_4.View"
-      xmlns:vc="clr-namespace:MVVM_06_Converters_4.View.Converter"
-      xmlns:mvvm="clr-namespace:MVVM_06_Converters_4.ViewModels"
-      mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="450"
-      Title="PlotFrame" >
+<Page
+    x:Class="MVVM_06_Converters_4.View.PlotFrame"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:local="clr-namespace:MVVM_06_Converters_4.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="clr-namespace:MVVM_06_Converters_4.ViewModels"
+    xmlns:vc="clr-namespace:MVVM_06_Converters_4.View.Converter"
+    Title="PlotFrame"
+    d:DesignHeight="800"
+    d:DesignWidth="450"
+    mc:Ignorable="d">
     <Page.DataContext>
-        <mvvm:PlotFrameViewModel/>
+        <mvvm:PlotFrameViewModel />
     </Page.DataContext>
     <Page.Resources>
         <vc:WindowPortToGridLines x:Key="vcPortGrid" />
     </Page.Resources>
     <Grid Background="White">
         <i:Interaction.Behaviors>
-            <mvvm:CanvasBehavior/>
+            <mvvm:CanvasBehavior />
         </i:Interaction.Behaviors>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ItemsControl Grid.Row="0" ItemsSource="{Binding WindowPort, ConverterParameter=100, Converter={StaticResource vcPortGrid}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Canvas>
-                    </Canvas>
+                    <Canvas />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
-        <ItemsControl Grid.Row="0" ItemsSource="{Binding Dataset1, ConverterParameter=100, Converter={StaticResource vcPortGrid}}" >
+        <ItemsControl Grid.Row="0" ItemsSource="{Binding Dataset1, ConverterParameter=100, Converter={StaticResource vcPortGrid}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Canvas>
-                    </Canvas>
+                    <Canvas />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
-        <ItemsControl Grid.Row="0" ItemsSource="{Binding Arrows, ConverterParameter=100, Converter={StaticResource vcPortGrid}}" >
+        <ItemsControl Grid.Row="0" ItemsSource="{Binding Arrows, ConverterParameter=100, Converter={StaticResource vcPortGrid}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Canvas>
-                    </Canvas>
+                    <Canvas />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
         <ItemsControl Grid.Row="0" ItemsSource="{Binding Circles, ConverterParameter=100, Converter={StaticResource vcPortGrid}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Canvas>
-                    </Canvas>
+                    <Canvas />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
         <ItemsControl Grid.Row="0" ItemsSource="{Binding Polynomes, ConverterParameter=100, Converter={StaticResource vcPortGrid}}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <Canvas>
-                    </Canvas>
+                    <Canvas />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
