--- a/GenFreeWin/MdbBrowser/Views/SchemaView.xaml
+++ b/GenFreeWin/MdbBrowser/Views/SchemaView.xaml
@@ -1,22 +1,27 @@
-﻿<Page x:Class="MdbBrowser.Views.SchemaView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MdbBrowser.Views"
-      xmlns:mvvm="clr-namespace:MdbBrowser.ViewModels"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="SchemaView">
+﻿<Page
+    x:Class="MdbBrowser.Views.SchemaView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MdbBrowser.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="clr-namespace:MdbBrowser.ViewModels"
+    Title="SchemaView"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <Page.DataContext>
-        <mvvm:SchemaViewViewModel/>
+        <mvvm:SchemaViewViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Text="{Binding TableName}"/>
-        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" ItemsSource="{Binding TableData}" Grid.Row="1"/>
+        <TextBlock Text="{Binding TableName}" />
+        <DataGrid
+            Grid.Row="1"
+            d:ItemsSource="{d:SampleData ItemCount=5}"
+            ItemsSource="{Binding TableData}" />
     </Grid>
 </Page>
