--- a/GenFreeWin/MdbBrowser/Views/TableView.xaml
+++ b/GenFreeWin/MdbBrowser/Views/TableView.xaml
@@ -1,37 +1,43 @@
-﻿<Page x:Class="MdbBrowser.Views.TableView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:mvvm="clr-namespace:MdbBrowser.ViewModels"
-      xmlns:local="clr-namespace:MdbBrowser.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="TableView">
+﻿<Page
+    x:Class="MdbBrowser.Views.TableView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MdbBrowser.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="clr-namespace:MdbBrowser.ViewModels"
+    Title="TableView"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <Page.DataContext>
-        <mvvm:TableViewViewModel/>
+        <mvvm:TableViewViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Text="{Binding Path=TableName}" d:Text="&gt;Tablenme>" FontWeight="Bold" Margin="2"/>
+        <TextBlock
+            Margin="2"
+            d:Text="&gt;Tablenme&gt;"
+            FontWeight="Bold"
+            Text="{Binding Path=TableName}" />
         <TabControl Grid.Row="1">
             <TabItem Header="Fields">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid ItemsSource="{Binding Columns}" AutoGenerateColumns="False">
+                    <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Columns}">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
-                            <DataGridTextColumn Header="Type" Binding="{Binding Data[0]}"/>
-                            <DataGridTextColumn Header="Size" Binding="{Binding Data[1]}"/>
+                            <DataGridTextColumn Binding="{Binding Name}" Header="Name" />
+                            <DataGridTextColumn Binding="{Binding Data[0]}" Header="Type" />
+                            <DataGridTextColumn Binding="{Binding Data[1]}" Header="Size" />
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
             </TabItem>
             <TabItem Header="Data">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" ItemsSource="{Binding TableData}"/>
+                    <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" ItemsSource="{Binding TableData}" />
                 </Grid>
             </TabItem>
         </TabControl>
