--- a/GenFreeWin/MapDemo/MainWindow.xaml
+++ b/GenFreeWin/MapDemo/MainWindow.xaml
@@ -2,7 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:map="clr-namespace:GenFreeBrowser.Map.Controls;assembly=GenFreeBrowser"
+        xmlns:conv="clr-namespace:MapDemo.Converters;assembly=MapDemo"
         Title="Map Demo" Width="900" Height="600">
+    <Window.Resources>
+        <conv:GeoPointDmsConverter x:Key="GeoPointDms" SecondsDecimals="2" />
+    </Window.Resources>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="4">
             <ComboBox Width="220"
@@ -12,9 +16,9 @@
             <Slider Width="150" Minimum="0" Maximum="21" Value="{Binding Viewport.Zoom,Mode=TwoWay}"/>
             <Button Content="Center World" Margin="12,0,0,0" Command="{Binding CenterWorldCommand}"/>
             <TextBlock Text="Center:" VerticalAlignment="Center" Margin="12,0,4,0"/>
-            <TextBlock Text="{Binding Viewport.Center}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding Viewport.Center, Converter={StaticResource GeoPointDms}}" VerticalAlignment="Center"/>
             <TextBlock Text="Cursor:" VerticalAlignment="Center" Margin="12,0,4,0"/>
-            <TextBlock Text="{Binding Viewport.Cursor}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding Viewport.Cursor, Converter={StaticResource GeoPointDms}}" VerticalAlignment="Center"/>
         </StackPanel>
         <map:MapView Viewport="{Binding Viewport}" TileSource="{Binding TileSource}" />
     </DockPanel>
