--- a/GenFreeWin/MapDemo/MainWindow.xaml
+++ b/GenFreeWin/MapDemo/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:map="clr-namespace:GenFreeBrowser.Map.Controls;assembly=GenFreeBrowser"
-        xmlns:conv="clr-namespace:MapDemo.Converters;assembly=MapDemo"
+        xmlns:conv="clr-namespace:MapDemo.Converters"
         Title="Map Demo" Width="900" Height="600">
     <Window.Resources>
         <conv:GeoPointDmsConverter x:Key="GeoPointDms" SecondsDecimals="2" />
