--- a/GenFreeWin/GenFreeBrowser/App.xaml
+++ b/GenFreeWin/GenFreeBrowser/App.xaml
@@ -2,7 +2,6 @@
     x:Class="GenFreeBrowser.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:GenFreeBrowser"
-    StartupUri="MainWindow.xaml">
+    xmlns:local="clr-namespace:GenFreeBrowser">
     <Application.Resources />
 </Application>
