--- a/GenFreeWin/GenFreeBrowser/Views/FraPersonenList.xaml
+++ b/GenFreeWin/GenFreeBrowser/Views/FraPersonenList.xaml
@@ -3,12 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GenFreeBrowser.Views"
-             xmlns:mvvm="clr-namespace:GenFreeBrowser.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
-    <Grid>
-            
-    </Grid>
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
+    <DockPanel Margin="8">
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="0 0 0 8">
+            <Button Content="Neu laden" Command="{Binding LadeAsyncCommand}" Margin="0 0 8 0" />
+            <Button Content="Aktualisieren" Command="{Binding RefreshAsyncCommand}" />
+            <TextBlock Text="Lädt..." Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="16 0 0 0" />
+        </StackPanel>
+        <ListView ItemsSource="{Binding Personen}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="ID" DisplayMemberBinding="{Binding Id}" Width="60" />
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Vollname}" Width="200" />
+                    <GridViewColumn Header="Geburt" DisplayMemberBinding="{Binding GeburtsDatum}" Width="100" />
+                    <GridViewColumn Header="Alter" DisplayMemberBinding="{Binding LebensAlter}" Width="60" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+    </DockPanel>
 </UserControl>
