--- a/GenFreeWin/GenFreeBrowser.ViewHost/MainWindow.xaml
+++ b/GenFreeWin/GenFreeBrowser.ViewHost/MainWindow.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:GenFreeBrowser.Views;assembly=GenFreeBrowser"
-        Title="View Host" Height="600" Width="900">
+        xmlns:host="clr-namespace:GenFreeBrowser.ViewHost"
+        xmlns:vm="clr-namespace:GenFreeBrowser.ViewHost.ViewModels"
+        Title="View Host" Height="600" Width="1200">
     <Grid>
         <TabControl>
             <TabItem Header="Personen Liste">
@@ -10,6 +12,13 @@
             </TabItem>
             <TabItem Header="Kern Familie">
                 <views:KernFamilieView />
+            </TabItem>
+            <TabItem Header="FamilyView (Dummy)">
+                <views:FamilyView>
+                    <views:FamilyView.DataContext>
+                        <vm:FamilyViewDummyVM />
+                    </views:FamilyView.DataContext>
+                </views:FamilyView>
             </TabItem>
         </TabControl>
     </Grid>
