--- a/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol1/App.axaml
+++ b/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol1/App.axaml
@@ -2,7 +2,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AA16_UserControl1"
-             x:Class="AA16_UserControl1.App">
+             x:Class="AA16_UserControl1.App"
+						 RequestedThemeVariant="Dark">
   <Application.Styles>
     <FluentTheme />
 		<StyleInclude Source="Styles/AppDefaultStyles.axaml" />
