--- a/Avalonia_Apps/AA18_MultiConverter/AA18_MultiConverters/App.axaml
+++ b/Avalonia_Apps/AA18_MultiConverter/AA18_MultiConverters/App.axaml
@@ -1,9 +1,9 @@
 <Application xmlns="https://github.com/avaloniaui"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:view="clr-namespace:AA18_MultiConverter.View"
+ xmlns:views="clr-namespace:AA18_MultiConverter.Views"
  x:Class="AA18_MultiConverter.App">
- <Application.Styles>
- <FluentTheme />
- <!-- Style for a label and textbox layout used in DateDifView if needed -->
- </Application.Styles>
+	<Application.Styles>
+		<FluentTheme />
+		<!-- Style for a label and textbox layout used in DateDifView if needed -->
+	</Application.Styles>
 </Application>
