--- a/CSharpBible/Data/DataAnalysis/DataAnalysis.WPF/Views/MainWindow.xaml
+++ b/CSharpBible/Data/DataAnalysis/DataAnalysis.WPF/Views/MainWindow.xaml
@@ -1,41 +1,72 @@
 <Window x:Class="DataAnalysis.WPF.Views.MainWindow"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:vm="clr-namespace:DataAnalysis.WPF.ViewModels"
- mc:Ignorable="d"
- Title="DataAnalysis" Height="600" Width="1100">
- <Grid Margin="12">
- <Grid.RowDefinitions>
- <RowDefinition Height="Auto"/>
- <RowDefinition Height="2*"/>
- <RowDefinition Height="*"/>
- <RowDefinition Height="Auto"/>
- </Grid.RowDefinitions>
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+     xmlns:vm="clr-namespace:DataAnalysis.WPF.ViewModels"
+     xmlns:p="clr-namespace:DataAnalysis.WPF.Properties"
+     xmlns:ctrls="clr-namespace:DataAnalysis.WPF.Views.Controls"
+     mc:Ignorable="d"
+     Title="{x:Static p:Resources.AppTitle}" Height="700" Width="1200">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:SeriesAggregationViewModel}">
+            <ctrls:SeriesAggregationView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:MatrixAggregationViewModel}">
+            <ctrls:MatrixAggregationView/>
+        </DataTemplate>
+    </Window.Resources>
+    <Grid Margin="12">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
- <StackPanel Orientation="Horizontal" Margin="0,0,8,0">
- <TextBox Width="420" Text="{Binding InputPath, UpdateSourceTrigger=PropertyChanged}"/>
- <Button Content="Datei waehlen" Command="{Binding BrowseCommand}"/>
- <Button Content="Vorschau" Command="{Binding PreviewCommand}"/>
- <Button Content="Auswerten" Command="{Binding AnalyzeCommand}"/>
- </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="0,0,8,0">
+            <TextBox Width="420" Text="{Binding InputPath, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Content="{x:Static p:Resources.BtnBrowse}" Command="{Binding BrowseCommand}"/>
+            <Button Content="{x:Static p:Resources.BtnPreview}" Command="{Binding PreviewCommand}"/>
+            <Button Content="{x:Static p:Resources.BtnAnalyze}" Command="{Binding AnalyzeCommand}"/>
+            <Button Content="{x:Static p:Resources.BtnExport}" Command="{Binding ExportCommand}"/>
+        </StackPanel>
 
- <!-- Preview: DataTable/DataView for core and dynamic attribute fields -->
- <DataGrid Grid.Row="1" ItemsSource="{Binding PreviewTable}" AutoGenerateColumns="True" IsReadOnly="True"/>
+        <!-- Analysis/Summary tabs moved to upper area -->
+        <TabControl Grid.Row="1">
+            <TabItem Header="Preview">
+                <!-- Preview moved to lower area -->
+                <DataGrid  ItemsSource="{Binding PreviewTable}" AutoGenerateColumns="True" IsReadOnly="True"/>
+               
+            </TabItem>
+            <TabItem Header="Analysis" DataContext="{Binding AnalysisVM}">
+                <ListBox ItemsSource="{Binding Aggregations}"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            <Setter Property="Margin" Value="0,6,0,6"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+            </TabItem>
+        </TabControl>
 
- <!-- Summary after analysis -->
- <DataGrid Grid.Row="2" ItemsSource="{Binding SummaryItems}" AutoGenerateColumns="False" IsReadOnly="True">
- <DataGrid.Columns>
- <DataGridTextColumn Header="Kategorie" Binding="{Binding Key}"/>
- <DataGridTextColumn Header="Wert" Binding="{Binding Value}"/>
- </DataGrid.Columns>
- </DataGrid>
-
- <StatusBar Grid.Row="3">
- <StatusBarItem>
- <TextBlock Text="{Binding Status}"/>
- </StatusBarItem>
- </StatusBar>
- </Grid>
+        <DataGrid Grid.Row="2" ItemsSource="{Binding SummaryItems}" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="{x:Static p:Resources.GridCategoryHeader}" Binding="{Binding Key}"/>
+                <DataGridTextColumn Header="{x:Static p:Resources.GridValueHeader}" Binding="{Binding Value}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <StatusBar Grid.Row="3">
+            <StatusBarItem>
+                <TextBlock Text="{Binding Status}"/>
+            </StatusBarItem>
+        </StatusBar>
+    </Grid>
 </Window>
