--- a/Avalonia_Apps/AA14_ScreenX/AA14_ScreenX/Views/ScreenXView.axaml
+++ b/Avalonia_Apps/AA14_ScreenX/AA14_ScreenX/Views/ScreenXView.axaml
@@ -2,7 +2,9 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:vm="clr-namespace:AA14_ScreenX.ViewModels"
  mc:Ignorable="d"
+ x:DataType="vm:RenderViewModel"
  x:Class="AA14_ScreenX.Views.ScreenXView">
 	<Grid ColumnDefinitions="168, *" RowDefinitions="*">
 		<!-- Left panel -->
