--- a/CSharpBible/Data/DataAnalysis/DataAnalysis.WPF/Views/Controls/SeriesAggregationView.xaml
+++ b/CSharpBible/Data/DataAnalysis/DataAnalysis.WPF/Views/Controls/SeriesAggregationView.xaml
@@ -1,33 +1,20 @@
 <UserControl x:Class="DataAnalysis.WPF.Views.Controls.SeriesAggregationView"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- mc:Ignorable="d">
- <Grid>
-  <Grid.ColumnDefinitions>
-   <ColumnDefinition Width="200"/>
-   <ColumnDefinition Width="*"/>
-   <ColumnDefinition Width="Auto"/>
-  </Grid.ColumnDefinitions>
-  <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14" Grid.ColumnSpan="3"/>
-  <ScrollViewer Grid.ColumnSpan="3" Margin="0,8,0,0" VerticalScrollBarVisibility="Auto">
-   <ItemsControl ItemsSource="{Binding Items}">
-    <ItemsControl.ItemTemplate>
-     <DataTemplate>
-      <Grid>
-       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="200"/>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="Auto"/>
-       </Grid.ColumnDefinitions>
-       <TextBlock Grid.Column="0" Text="{Binding Category}" TextTrimming="CharacterEllipsis"/>
-       <Border Grid.Column="1" Background="#2D89EF" Height="18" Width="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl}, Path=ActualWidth}"/>
-       <TextBlock Grid.Column="2" Text="{Binding Value}" Margin="8,0,0,0"/>
-      </Grid>
-     </DataTemplate>
-    </ItemsControl.ItemTemplate>
-   </ItemsControl>
-  </ScrollViewer>
- </Grid>
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+     xmlns:local="clr-namespace:DataAnalysis.WPF.Views.Controls"
+     mc:Ignorable="d">
+    <StackPanel>
+        <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14" Grid.ColumnSpan="3"/>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <ItemsControl ItemsSource="{Binding Items}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <local:BarItemView/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+    </StackPanel>
 </UserControl>
